# src/libs/api/index.ts
@@ -49,6 +49,7 @@ export type { MemberPointRecord } from './models/MemberPointRecord';
 export type { MemberRecord } from './models/MemberRecord';
 export type { MemberReview } from './models/MemberReview';
 export type { OperationRecord } from './models/OperationRecord';
+export type { OperationRecordFilter } from './models/OperationRecordFilter';
 export type { Order } from './models/Order';
 export type { OrderBuy } from './models/OrderBuy';
 export type { OrderSell } from './models/OrderSell';
@@ -146,6 +147,7 @@ export { $MemberPointRecord } from './schemas/$MemberPointRecord';
 export { $MemberRecord } from './schemas/$MemberRecord';
 export { $MemberReview } from './schemas/$MemberReview';
 export { $OperationRecord } from './schemas/$OperationRecord';
+export { $OperationRecordFilter } from './schemas/$OperationRecordFilter';
 export { $Order } from './schemas/$Order';
 export { $OrderBuy } from './schemas/$OrderBuy';
 export { $OrderSell } from './schemas/$OrderSell';
